fixed menu alignment

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -126,7 +126,7 @@
 	text-align: right;
 	height: 70%;
 	max-height: 800px;
-	margin: auto 0 auto auto;
+	margin: 0 0 auto auto;
 }
 
 .contentBlock {
